samples/_failures_safe/1761786832_3c1bb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_972815cf.c: In function ‘main’:
./samples/SAFE/__tmp_972815cf.c:145:16: error: missing terminating " character
  145 |         printf("Failed to read second
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_972815cf.c:145:9: error: expected expression at end of input
  145 |         printf("Failed to read second
      |         ^~~~~~
./samples/SAFE/__tmp_972815cf.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_972815cf.c:145:9: error: expected declaration or statement at end of input
